# pgbench_collector

./: .gitignore  README.md  docker-compose-proxy.yml  docker-compose.proxy.yml  docker-compose.yml  pgbench_collector.code-workspace  prometheus.yml
agent/: agent.py  agent.service  pyproject.toml
agent/pgbench_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.js  index.js  io.js  queue.js  server.js  worker.js  ws-registry.js
backend/src/queues/: pgbench.js
backend/src/routes/: agents.js  running.js  scenario.js  stop.js
backend/src/ws/: agent-handler.js  progress-handler.js  result-handler.js
grafana/provisioning/datasources/: datasource.yml
init/: 00_create_lab.sh  10_create_lab.sql
ui/: Dockerfile  next.config.js  package-lock.json  package.json  theme.ts  tsconfig.json
ui/components/: AgentSelector.tsx  Layout.tsx  RunningList.tsx
ui/pages/: _app.tsx  index.js  index.tsx
